--- a/Forecast/current-day-forecast.html
+++ b/Forecast/current-day-forecast.html
@@ -12,11 +12,11 @@
     <nav>
         <ul>
             <li><a href="current-day-forecast.html">Current Day Forecast</a></li>
-            <li><a href="week-forecast.html">Week Forecast</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="clothes-helper.html">Clothes Helper</a></li>
-            <li><a href="forecast-terms.html">Forecast Terms</a></li>
+            <li><a href="current-week-forecast.html">Week Forecast</a></li>
+            <li><a href="../about-us.html">About Us</a></li>
+            <li><a href="../support.html">Support</a></li>
+            <li><a href="../clothes-help.html">Clothes Helper</a></li>
+            <li><a href="../forecast-terms.html">Forecast Terms</a></li>
         </ul>
     </nav>
 </header>
