--- a/Forecast/current-week-forecast.html
+++ b/Forecast/current-week-forecast.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Current Week Forecast</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <title>Week Forecast</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
@@ -22,10 +22,23 @@
 </header>
 
 <main>
-    <!-- Content of the current week forecast page goes here -->
-    <h2>This Week's Weather Forecast</h2>
-    <!-- Placeholder content -->
-    <p>Placeholder content for the current week forecast.</p>
+    <!-- Content of the week forecast page goes here -->
+    <h2>Week Forecast</h2>
+    <p>This page provides the forecast for the upcoming week.</p>
+    <table>
+        <caption>Weekly Forecast</caption>
+        <tr>
+            <th>Day</th>
+            <th>Temperature</th>
+            <th>Conditions</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>25°C</td>
+            <td>Sunny</td>
+        </tr>
+        <!-- Add more rows for each day of the week -->
+    </table>
 </main>
 
 <footer>
@@ -33,6 +46,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
