--- a/forecast-terms.html
+++ b/forecast-terms.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forecast Terms</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
     <h1>Weather Forecast Service</h1>
     <nav>
         <ul>
-            <li><a href="Forecast/current-day-forecast.html">Current Day Forecast</a></li>
-            <li><a href="Forecast/current-week-forecast.html">Week Forecast</a></li>
+            <li><a href="/Forecast/current-day-forecast.html">Current Day Forecast</a></li>
+            <li><a href="/Forecast/current-week-forecast.html">Week Forecast</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="clothes-help.html">Clothes Helper</a></li>
@@ -24,8 +24,13 @@
 <main>
     <!-- Content of the forecast terms page goes here -->
     <h2>Forecast Terms</h2>
-    <!-- Placeholder content -->
-    <p>Placeholder content for the forecast terms page.</p>
+    <p>Here are some common terms used in weather forecasts:</p>
+    <ul>
+        <li><strong>Temperature:</strong> The measure of hotness or coldness measured in degrees Celsius or Fahrenheit.</li>
+        <li><strong>Humidity:</strong> The amount of water vapor present in the air.</li>
+        <li><strong>Wind Speed:</strong> The speed at which air is moving horizontally.</li>
+        <!-- Add more forecast terms as needed -->
+    </ul>
 </main>
 
 <footer>
@@ -33,6 +38,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
