--- a/Forecast/current-day-forecast.html
+++ b/Forecast/current-day-forecast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Day Forecast</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
@@ -23,9 +23,17 @@
 
 <main>
     <!-- Content of the current day forecast page goes here -->
-    <h2>Today's Weather Forecast</h2>
-    <!-- Placeholder content -->
-    <p>Placeholder content for the current day forecast.</p>
+    <h2>Current Day Forecast</h2>
+    <p>This page provides the forecast for the current day.</p>
+    <form>
+        <label for="city">Enter city:</label>
+        <input type="text" id="city" name="city">
+        <button type="submit">Get Forecast</button>
+    </form>
+    <div>
+        <!-- Placeholder content for weather forecast -->
+        <p>Weather forecast will be displayed here.</p>
+    </div>
 </main>
 
 <footer>
@@ -33,6 +41,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
