--- a/support.html
+++ b/support.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
     <h1>Weather Forecast Service</h1>
     <nav>
         <ul>
-            <li><a href="Forecast/current-day-forecast.html">Current Day Forecast</a></li>
-            <li><a href="Forecast/current-week-forecast.html">Week Forecast</a></li>
+            <li><a href="/Forecast/current-day-forecast.html">Current Day Forecast</a></li>
+            <li><a href="/Forecast/current-week-forecast.html">Week Forecast</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="clothes-help.html">Clothes Helper</a></li>
@@ -24,8 +24,16 @@
 <main>
     <!-- Content of the support page goes here -->
     <h2>Support</h2>
-    <!-- Placeholder content -->
-    <p>Placeholder content for the support page.</p>
+    <p>If you have any questions or need assistance, please fill out the form below:</p>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" cols="50"></textarea><br>
+        <button type="submit">Submit</button>
+    </form>
 </main>
 
 <footer>
@@ -33,6 +41,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
