--- a/support.html
+++ b/support.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
     <h1>Weather Forecast Service</h1>
     <nav>
         <ul>
-            <li><a href="/Forecast/current-day-forecast.html">Current Day Forecast</a></li>
-            <li><a href="/Forecast/current-week-forecast.html">Week Forecast</a></li>
+            <li><a href="Forecast/current-day-forecast.html">Current Day Forecast</a></li>
+            <li><a href="Forecast/current-week-forecast.html">Week Forecast</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="clothes-help.html">Clothes Helper</a></li>
@@ -41,6 +41,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
