--- a/Forecast/current-week-forecast.html
+++ b/Forecast/current-week-forecast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week Forecast</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
@@ -46,6 +46,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
