--- a/about-us.html
+++ b/about-us.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
 </head>
 <body>
 <header>
     <h1>Weather Forecast Service</h1>
     <nav>
         <ul>
-            <li><a href="/Forecast/current-day-forecast.html">Current Day Forecast</a></li>
-            <li><a href="/Forecast/current-week-forecast.html">Week Forecast</a></li>
+            <li><a href="Forecast/current-day-forecast.html">Current Day Forecast</a></li>
+            <li><a href="Forecast/current-week-forecast.html">Week Forecast</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="clothes-help.html">Clothes Helper</a></li>
@@ -27,9 +27,7 @@
     <p>We are a team of weather enthusiasts dedicated to providing accurate and reliable weather forecasts to our users.</p>
     <h3>Our Team</h3>
     <ul>
-        <li>John Doe - Meteorologist</li>
-        <li>Jane Smith - Web Developer</li>
-        <li>Mike Johnson - Data Analyst</li>
+        <li>Denis Shvets - Developer</li>
     </ul>
     <h3>Our Mission</h3>
     <p>Our mission is to make weather information accessible and easy to understand for everyone.</p>
@@ -40,6 +38,6 @@
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
 </body>
 </html>
