--- a/about-us.html
+++ b/about-us.html
@@ -27,10 +27,15 @@
     <p>We are a team of weather enthusiasts dedicated to providing accurate and reliable weather forecasts to our users.</p>
     <h3>Our Team</h3>
     <ul>
-        <li>Denis Shvets - Developer</li>
+        <li>John Doe - Meteorologist</li>
+        <li>Jane Smith - Web Developer</li>
+        <li>Mike Johnson - Data Analyst</li>
     </ul>
     <h3>Our Mission</h3>
     <p>Our mission is to make weather information accessible and easy to understand for everyone.</p>
+
+    <!-- Embedding a weather-related video -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
 </main>
 
 <footer>
