--- a/about-us.html
+++ b/about-us.html
@@ -27,15 +27,13 @@
     <p>We are a team of weather enthusiasts dedicated to providing accurate and reliable weather forecasts to our users.</p>
     <h3>Our Team</h3>
     <ul>
-        <li>John Doe - Meteorologist</li>
-        <li>Jane Smith - Web Developer</li>
-        <li>Mike Johnson - Data Analyst</li>
+        <li>Shvets Denis - The developer</li>
     </ul>
-    <h3>Our Mission</h3>
-    <p>Our mission is to make weather information accessible and easy to understand for everyone.</p>
+    <h3>My Mission</h3>
+    <p>My mission is to make weather information accessible and easy to understand for everyone.</p>
 
     <!-- Embedding a weather-related video -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/_0S8VpU3bTY" title="Weather Forecasts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </main>
 
 <footer>
