--- a/Forecast/current-week-forecast.html
+++ b/Forecast/current-week-forecast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week Forecast</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header>
@@ -22,7 +22,6 @@
 </header>
 
 <main>
-    <!-- Content of the week forecast page goes here -->
     <h2>Week Forecast</h2>
     <p>This page provides the forecast for the upcoming week.</p>
     <table>
@@ -37,15 +36,13 @@
             <td>25°C</td>
             <td>Sunny</td>
         </tr>
-        <!-- Add more rows for each day of the week -->
     </table>
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="../script.js"></script>
 </body>
 </html>
