--- a/support.html
+++ b/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -22,7 +22,6 @@
 </header>
 
 <main>
-    <!-- Content of the support page goes here -->
     <h2>Support</h2>
     <p>If you have any questions or need assistance, please fill out the form below:</p>
     <form>
@@ -37,10 +36,9 @@
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script>
 </body>
 </html>
