--- a/Forecast/current-day-forecast.html
+++ b/Forecast/current-day-forecast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Day Forecast</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header>
@@ -22,7 +22,6 @@
 </header>
 
 <main>
-    <!-- Content of the current day forecast page goes here -->
     <h2>Current Day Forecast</h2>
     <p>This page provides the forecast for the current day.</p>
     <form>
@@ -31,16 +30,14 @@
         <button type="submit">Get Forecast</button>
     </form>
     <div>
-        <!-- Placeholder content for weather forecast -->
         <p>Weather forecast will be displayed here.</p>
     </div>
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="../script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="../script.js"></script>
 </body>
 </html>
