--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -22,7 +22,6 @@
 </header>
 
 <main>
-    <!-- Content of the about us page goes here -->
     <h2>About Us</h2>
     <p>We are a team of weather enthusiasts dedicated to providing accurate and reliable weather forecasts to our users.</p>
     <h3>Our Team</h3>
@@ -32,15 +31,13 @@
     <h3>My Mission</h3>
     <p>My mission is to make weather information accessible and easy to understand for everyone.</p>
 
-    <!-- Embedding a weather-related video -->
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/_0S8VpU3bTY" title="Weather Forecasts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script>
 </body>
 </html>
