--- a/clothes-help.html
+++ b/clothes-help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothes Helper</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -22,7 +22,6 @@
 </header>
 
 <main>
-    <!-- Content of the clothes helper page goes here -->
     <h2>Clothes Helper</h2>
     <p>Here are some clothing recommendations based on weather conditions:</p>
     <table>
@@ -35,15 +34,13 @@
             <td>Sunny</td>
             <td>T-shirt, shorts, sunglasses</td>
         </tr>
-        <!-- Add more rows for different weather conditions -->
     </table>
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script>
 </body>
 </html>
