--- a/forecast-terms.html
+++ b/forecast-terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forecast Terms</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -22,22 +22,19 @@
 </header>
 
 <main>
-    <!-- Content of the forecast terms page goes here -->
     <h2>Forecast Terms</h2>
     <p>Here are some common terms used in weather forecasts:</p>
     <ul>
         <li><strong>Temperature:</strong> The measure of hotness or coldness measured in degrees Celsius or Fahrenheit.</li>
         <li><strong>Humidity:</strong> The amount of water vapor present in the air.</li>
         <li><strong>Wind Speed:</strong> The speed at which air is moving horizontally.</li>
-        <!-- Add more forecast terms as needed -->
     </ul>
 </main>
 
 <footer>
-    <!-- Footer content goes here -->
     <p>&copy; 2024 Weather Forecast Service. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Підключення зовнішніх скриптів -->
+<script src="script.js"></script>
 </body>
 </html>
